<resources>
    <string name="app_name">SA Admin App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_users">USERS</string>
    <string name="menu_pending_approval">PENDING APPROVAL</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_reports">REPORTS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid NIC</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nic">NIC</string>
    <string name="preference_file_key">Smart Attendance Admin Pref</string>
    <string name="username">Username</string>
    <string name="ok">OK</string>
    <string name="wait">Please wait....</string>
    <string name="search_input_text_hint">Search User</string>
    <string name="no_internet">No Internet</string>
    <string name="action_approve">Approve</string>
    <string name="action_reject">Reject</string>
    <string name="fingerprint_login">FINGERPRINT LOGIN</string>

    <string name="change_password">Change Password</string>
    <string name="device_id">Device ID</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="invalid_confirm_password">Password Not Matching</string>
    <string name="menu_signout">SIGN OUT</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirm_logout_message">Do you want to sign out?</string>
    <string name="user_details">User Details</string>
    <string name="pending_approval_details">Pending Approval</string>
    <string name="edit_user">Edit User</string>
    <string name="update">Update</string>
    <string name="approval_submitted_successfully">Approval Submitted Successfully</string>
    <string name="userroleselecterror">Select a user role</string>
    <string name="confirm_reject_message">Do you want to reject this approval</string>
    <string name="device_id_mandatory">Incorrect device ID</string>
    <string name="userstatus">User Status</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bio_metric_disabled">Finger Print Authentication Disabled. Enable finger print authentication from Settings</string>
    <string name="generate_qr">Generate QR</string>
    <string name="employee_qr">Employee QR</string>

</resources>