<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_users">

    <fragment
        android:id="@+id/nav_users"
        android:name="lnbti.charithgtp01.smartattendanceadminapp.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pending_approvals"
        android:name="lnbti.charithgtp01.smartattendanceadminapp.ui.pendingapprovals.PendingApprovalsFragment"
        android:label="@string/menu_pending_approval"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="lnbti.charithgtp01.smartattendanceadminapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
</navigation>